chore: Fix texts and css

--- a/_posts/2021-05-17-test copy 2.md
+++ b/_posts/2021-05-17-test copy 2.md
@@ -5,7 +5,7 @@ description: "Just about everything you'll need to style in the theme: headings,
 modified: 2014-12-24
 tags: [sample post]
 categories: Daily
-image: /assets/img/logo.png
+image: /assets/img/yourname.jpg
 ---
 
 hi
