--- a/_posts/2021-05-17-test.md
+++ b/_posts/2021-05-17-test.md
@@ -1,12 +1,14 @@
 ---
 layout: post
 title: First Post
-description: "Just about everything you'll need to style in the theme: headings, paragraphs, blockquotes, tables, code blocks, and more."
 modified: 2014-12-24
-tags: [sample post]
-categories: Daily
+tags: [githubpages, github, jekyll]
+category: 'Daily'
 image: /assets/img/logo.png
 ---
 
-hi
-<img src="/assets/img/logo.png">
+#### 2021/5/17 첫 포스팅이다
+<br>
+열심히 해야징
+<br>
+이상
